@@ -107,11 +107,20 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.4</version>
+                <configuration>
+                    <argLine>-XX:+UseZGC --enable-preview -XX:+UseStringDeduplication</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.2.0</version>
                 <configuration>
                     <mainClass>com.guidewire.pc.App</mainClass>
+                    <commandlineArgs>-XX:+UseZGC --enable-preview -XX:+UseStringDeduplication</commandlineArgs>
                 </configuration>
             </plugin>
         </plugins>
